# TPUGPU

./: .gitignore  PROJECT_PLAN.md  README.md  pyproject.toml
docs/: AGENT_HANDOFF_README.md  EXPERTS_README.md  GPU_VM_SETUP.md  JAX_XLA_PRIMER.md  LIVE_DEMO_README.md  ROUTER_README.md  SERVING_README.md  TPU_FIRST_DDM_GUIDE.md  TPU_VM_SETUP.md
scripts/: README.md  cluster_mnist.py  run_router_demo.py  serve_expert_mnist.py  setup_router_vm.sh  setup_tpu_vm.sh  train_expert_mnist.py  train_router_mnist.py
src/tpugpu/: config.py
src/tpugpu/data/: mnist.py
src/tpugpu/demo/: app.py
src/tpugpu/demo/static/: app.js  index.html  styles.css
src/tpugpu/eval/: __init__.py  reporting.py
src/tpugpu/experts/: train.py
src/tpugpu/router/: inference.py  train.py
